# chernobyl

./: .gitignore  CMakeLists.txt  build.sh
include/: character.hpp  game.hpp  randomGen.hpp
src/: character.cpp  game.cpp  main.cpp  soldier.cpp  zombie.cpp
